--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World!</title>
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <meta
-      http-equiv="X-Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>, Chromium
-    <span id="chrome-version"></span>, and Electron
-    <span id="electron-version"></span>.
-
-    <!-- You can also require other files to run in this process -->
-    <script src="./dist/renderer.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Readit</title>
+        <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+        <meta
+            http-equiv="Content-Security-Policy"
+            content="default-src 'self'; script-src 'self'"
+        />
+        <meta
+            http-equiv="X-Content-Security-Policy"
+            content="default-src 'self'; script-src 'self'"
+        />
+        <link rel="stylesheet" href="styles/main.css" />
+    </head>
+    <body>
+        <header>
+            <button id="show-modal">+</button>
+            <input type="text" id="search" placeholder="Search" />
+        </header>
+        <main>
+            <p id="no-items">No Items</p>
+            <div id="items"></div>
+        </main>
+        <div id="modal">
+            <input type="text" id="url" placeholder="Enter URL" />
+            <button id="add-item">Add Item</button>
+            <button id="close-modal">Cancel</button>
+        </div>
+        <!-- You can also require other files to run in this process -->
+        <script src="./dist/renderer.js"></script>
+    </body>
 </html>
